@@ -9,7 +9,7 @@
     
         <!-- ========================================================================= -->
         <h5schema name="FrameV1" version="0">
-            <tag name="skip-proxy"/>
+            <tag name="embedded"/>
             <tag name="external" value="psddl_hdf2psana/pnccd.h"/>
         </h5schema>
         <!-- ========================================================================= -->
