@@ -12,7 +12,7 @@
     
         <h5schema name="ClockTime" version="0">
 
-            <tag name="skip-proxy"/>
+            <tag name="embedded"/>
             <dataset name="data">
 
                 <attribute type="uint32_t" name="nanoseconds"/>
@@ -26,7 +26,7 @@
     
         <h5schema name="DetInfo" version="0">
 
-            <tag name="skip-proxy"/>
+            <tag name="embedded"/>
             <dataset name="data">
                 <attribute type="uint32_t" name="log"/>
                 <attribute type="uint32_t" name="phy"/>
